# cmd/api/auth.go
@@ -15,7 +15,12 @@ type RegisterUserPayload struct {
 	Password string `json:"password" validate:"required,min=3,max=72"`
 }
 
-// registerUserHandler godoc
+type UserWithToken struct {
+	*store.User
+	Token string `json:"token"`
+}
+
+// registerUser godoc
 //
 //	@Summary		Registers a user
 //	@Description	Registers a user
@@ -31,7 +36,7 @@ func (app *application) registerUserHandler(w http.ResponseWriter, r *http.Reque
 
 	var payload RegisterUserPayload
 
-	if err := readJSON(w, r, payload); err != nil {
+	if err := readJSON(w, r, &payload); err != nil {
 		app.badRequestReponse(w, r, err)
 		return
 	}
@@ -75,8 +80,14 @@ func (app *application) registerUserHandler(w http.ResponseWriter, r *http.Reque
 		return
 
 	}
+	UserWithToken := UserWithToken{
+		User: user,
+		Token: plainToken,
+	}
 
-	if err := app.jsonResponse(w, http.StatusCreated, nil); err != nil {
+
+
+	if err := app.jsonResponse(w, http.StatusCreated, UserWithToken); err != nil {
 		app.internalServerError(w, r, err)
 	}
 
